🎉: initial unit testing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neutron",
+  "name": "web_testing_unit_labs",
   "version": "1.0.0",
   "description": "Minimal JavaScript project setup",
   "author": {
@@ -9,12 +9,12 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AtomicBuilders/neutron/issues"
+    "url": "https://github.com/AtomicBuilders/WebTesting_unit_Labs/issues"
   },
-  "homepage": "https://github.com/AtomicBuilders/neutron#readme",
+  "homepage": "https://github.com/AtomicBuilders/WebTesting_unit_Labs#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AtomicBuilders/neutron.git"
+    "url": "git+https://github.com/AtomicBuilders/WebTesting_unit_Labs.git"
   },
   "keywords": [
     "JS",
@@ -22,21 +22,20 @@
     "Seed",
     "Template"
   ],
-  "main": "main.js",
   "scripts": {
     "test": "jest --watch -o",
     "format": "prettier --write \"./**/*.{js,json}\"",
     "jest": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "@types/jest": "^24.0.23",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "jest": "^24.9.0",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@types/jest": "^25.1.2",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1"
   }
 }
