--- a/.eslintrc
+++ b/.eslintrc
@@ -1,33 +1,34 @@
 {
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended", "plugin:jest/recommended"],
 
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "jest"],
 
   "env": {
     "browser": true,
     "es6": true,
     "node": true,
-    "jest": true
+    "jest": true,
+    "jest/globals": true
   },
-
   "rules": {
-    "prettier/prettier": "error",
     "complexity": ["error", { "max": 8 }],
     "max-depth": ["error", 2],
     "max-lines": ["warn", 160],
     "max-lines-per-function": ["warn", 20],
-    "max-nested-callbacks": ["error", 1],
+    "max-nested-callbacks": ["error", 2],
     "max-params": ["warn", 2],
     "no-magic-numbers": [
       "warn",
-      { "detectObjects": false, "enforceConst": true, "ignore": [1], "ignoreArrayIndexes": true }
+      { "detectObjects": false, "enforceConst": true, "ignore": [0, 1], "ignoreArrayIndexes": true }
     ],
     "no-multiple-empty-lines": ["warn", { "max": 2, "maxEOF": 1 }],
     "no-nested-ternary": "error",
-    "no-unused-vars": ["warn"]
+    "no-unused-vars": ["warn"],
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "parserOptions": {
-    "ecmaVersion": 7,
+    "ecmaVersion": 9,
     "sourceType": "module",
     "ecmaFeatures": {
       "modules": true
