--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,23 @@
 {
   "workbench.colorCustomizations": {
-    "editorError.foreground": "#907080",
-    "editorWarning.foreground": "#708090",
-    "activityBar.background": "#fbed80",
-    "activityBar.activeBorder": "#06b9a5",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#06b9a5",
-    "activityBarBadge.foreground": "#15202b",
-    "titleBar.activeBackground": "#f9e64f",
-    "titleBar.inactiveBackground": "#f9e64f99",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveForeground": "#15202b99",
-    "statusBar.background": "#f9e64f",
-    "statusBarItem.hoverBackground": "#f7df1e",
-    "statusBar.foreground": "#15202b"
+    "activityBar.background": "#ab307e",
+    "activityBar.activeBorder": "#25320e",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#25320e",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "titleBar.activeBackground": "#832561",
+    "titleBar.inactiveBackground": "#83256199",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "statusBar.background": "#832561",
+    "statusBarItem.hoverBackground": "#ab307e",
+    "statusBar.foreground": "#e7e7e7",
+    "activityBar.activeBackground": "#ab307e",
+    "statusBar.border": "#832561",
+    "titleBar.border": "#832561"
   },
-  "peacock.color": "#f9e64f",
+  "peacock.color": "#832561",
   "workbench.iconTheme": "material-icon-theme",
   "workbench.colorTheme": "Winter is Coming (Light)",
   "editor.formatOnSave": true,
@@ -26,8 +27,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "html.format.wrapAttributes": "force-aligned",
   "html.format.enable": true,
-  "html.format.wrapLineLength": 80,
+  "html.format.wrapLineLength": 100,
   "eslint.validate": ["javascript"],
   "spellright.language": ["en", "es"],
-  "spellright.documentTypes": ["markdown", "latex", "plaintext"]
+  "spellright.documentTypes": ["markdown", "javascript", "plaintext"]
 }
