--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "scripts": {
     "test": "jest --watch -o",
+    "test:basic": "jest src/unit/basic/basic.spec.js --watch -o",
     "format": "prettier --write \"./**/*.{js,json}\"",
     "jest": "jest",
     "lint": "eslint src/**/*.js"
