refactor: 👨🏼‍🎤 move files

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "jest --watch -o",
     "test:basic": "jest src/unit/basic/basic.spec.js --watch -o",
     "coverage": "jest src/unit/basic/basic.spec.js --collect-coverage",
+    "test:legacy": "jest src/unit/legacy --watch -o",
     "format": "prettier --write \"./**/*.{js,json}\"",
     "jest": "jest",
     "lint": "eslint src/**/*.js"
