--- a/.eslintrc
+++ b/.eslintrc
@@ -10,13 +10,16 @@
     "jest": true,
     "jest/globals": true
   },
+  "globals": {
+    "fetchMock": true
+  },
   "rules": {
     "complexity": ["error", { "max": 8 }],
     "max-depth": ["error", 2],
     "max-lines": ["warn", 160],
     "max-lines-per-function": ["warn", 20],
     "max-nested-callbacks": ["error", 2],
-    "max-params": ["warn", 2],
+    "max-params": ["warn", 3],
     "no-magic-numbers": [
       "warn",
       { "detectObjects": false, "enforceConst": true, "ignore": [0, 1], "ignoreArrayIndexes": true }
