--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:basic": "jest src/unit/basic/basic.spec.js --watch -o",
     "coverage": "jest src/unit/basic/basic.spec.js --collect-coverage",
     "test:legacy": "jest src/unit/legacy --watch -o",
+    "test:async": "jest src/unit/async --watch -o",
     "format": "prettier --write \"./**/*.{js,json}\"",
     "jest": "jest",
     "lint": "eslint src/**/*.js"
@@ -41,6 +42,7 @@
     "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.0.5"
   }
 }
