--- a/package.json
+++ b/package.json
@@ -30,18 +30,20 @@
     "test:async": "jest src/unit/async --watch -o",
     "format": "prettier --write \"./**/*.{js,json}\"",
     "jest": "jest",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "check-updates": "ncu -u"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.0",
-    "@babel/preset-env": "^7.10.0",
-    "@types/jest": "^25.2.2",
-    "babel-jest": "^26.0.1",
-    "eslint": "^7.1.0",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@types/jest": "^26.0.4",
+    "babel-jest": "^26.1.0",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.13.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "jest": "^26.0.1",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "npm-check-updates": "^7.0.1",
+    "jest": "^26.1.0",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.0.5"
   }
