--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
     ],
     "no-multiple-empty-lines": ["warn", { "max": 2, "maxEOF": 1 }],
     "no-nested-ternary": "error",
-    "no-unused-vars": ["warn"],
+    "no-unused-vars": 0,
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-explicit-any": "off"
   },
